syntax = "proto3";
option java_package = "top.lizhistudio.autolua.service";
option java_outer_classname = "Protocol";
message LuaValue
{
  oneof value {
    string s =1;
    int64 l=2;
    bool z =3;
    double d=4;
    bytes b =5;
  }
}

message Message
{
  int32 id = 1;
  enum TYPE{
    RETURN =0;
    ERROR = 1;
    EXECUTE =2;
    EXECUTE_FILE = 3;
    IS_RUNNING = 4;
    RESET = 5;
    INTERRUPT =6;
    EXIT = 7;
  }
  TYPE method = 2;
  repeated LuaValue data = 3;
}



